--- a/client/src/app/pages/chatbox/chatbox.page.html
+++ b/client/src/app/pages/chatbox/chatbox.page.html
@@ -1,19 +1,19 @@
 <ion-header>
   <ion-toolbar hideBackButton>
     <ion-buttons slot="start">
-      <ion-button fill="clear" style="font-size:larger" color="danger" (click)="goBack()">
-        <ion-icon name="arrow-back"></ion-icon>
+      <ion-button id="back" fill="clear" color="medium" (click)="goBack()">
+        <ion-icon color="secondary" name="arrow-back"></ion-icon> Back
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button fill="clear" strong color="dark">Details</ion-button>
+      <ion-button id="details" fill="clear" strong color="medium">Details</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 
 <ion-content>
-  <div style="font-size:10px; text-align:center;">7 minutes ago</div>
+  <div id="top" text-center>7 minutes ago</div>
   <ion-list no-lines class="msgbubble" *ngFor="let msg of messages">
     <div class="innermsg left" text-left *ngIf="userId != msg.id ">
       {{ msg.reply }}
@@ -26,10 +26,15 @@
 
 <ion-footer>
   <ion-toolbar>
+      <ion-buttons slot="start">
+          <ion-button id="download" fill="clear" strong color="secondary" (click)="ask(question)">
+            <ion-icon name="download"></ion-icon>
+          </ion-button>
+        </ion-buttons>
     <ion-input placeholder="Type here" [(ngModel)]="question" type="text"></ion-input>
     <ion-buttons slot="end">
-      <ion-button fill="clear" strong color="secondary" (click)="ask(question)">
-        <ion-icon name="send"></ion-icon>
+      <ion-button id="send" strong fill="solid" color="secondary" (click)="ask(question)">
+        Send
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
