--- a/client/src/app/pages/jobs/jobs.page.html
+++ b/client/src/app/pages/jobs/jobs.page.html
@@ -11,6 +11,7 @@
     <ion-tab-button tab="conversation">
       <ion-icon name="ios-text"></ion-icon>
       <ion-label>Conversation</ion-label>
+      <ion-badge color="danger">1</ion-badge>
     </ion-tab-button>
     <ion-tab-button tab="profile">
       <ion-icon name="md-person"></ion-icon>
