--- a/client/src/app/pages/location/location.page.html
+++ b/client/src/app/pages/location/location.page.html
@@ -1,16 +1,21 @@
-
-
-
 <ion-content>
-	<img  src="assets/imgs/mapimg.png" style="display:block;margin:auto;margin-top:70px;">
 
-	<p text-center>Please allow location access</p>
+	<div class="image">
+		<ion-img src="assets/imgs/mapimg.png" style="display:block;margin:auto;margin-top:70px;"></ion-img>
+	</div>
+
+	<div class="text">
+		<p text-center>Please allow location access</p>
+	</div>
+
+	<div class="text1">
+		<p text-center>This will helps us find job near you,
+			or specific area you choose.
+		</p>
+	</div>
 	
-	<p text-center style="font-size:15px;">This will helps us find job near you,<br>
-		or specific area you choose.
-  </p>
-  <div text-center>
-  <ion-button fill="outline" strong  (click)="notnowbtn()">NOT NOW</ion-button>
-	<ion-button color="danger" strong (click)="getLocation()" style="width:100px;">OK</ion-button>
+  <div class="text2">
+  <ion-button class="btn1" fill="outline" color="none" (click)="notnowbtn()"><span id="one">NOT NOW</span></ion-button>
+	<ion-button class="btn2" color="secondary" (click)="getLocation()" ><span id="two">OK</span></ion-button>
 </div>
 </ion-content>
