--- a/client/src/app/pages/modal/modal.page.html
+++ b/client/src/app/pages/modal/modal.page.html
@@ -1,5 +1,9 @@
 <ion-content>
-  <ion-img src="assets/imgs/map2.PNG" id="mapimg"></ion-img>
+  
+  <div>
+      <ion-img src="assets/imgs/map2.PNG"></ion-img>
+  </div>
+      
 
   <ion-list>
 
@@ -21,7 +25,7 @@
     </ion-item>
   </ion-list>
 
-  <div style="width:80%;margin-left:10%;margin-right:10%;">
+  <div class="btn" style="width:80%;margin-left:10%;margin-right:10%;">
       <ion-button color="primary" strong expand="block" (click)="filter()">Apply Filter</ion-button>
   </div>
 
