--- a/client/src/app/pages/signup/signup.page.html
+++ b/client/src/app/pages/signup/signup.page.html
@@ -1,20 +1,21 @@
 <ion-header>
-    <ion-toolbar>
+    <ion-toolbar color="light">
       <ion-buttons slot="start">
-        <ion-button (click)="goback()" color="primary">
-          <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
+        <ion-button id="close" (click)="goback()" color="success">
+          <ion-icon  slot="icon-only" name="close"></ion-icon>
         </ion-button>
       </ion-buttons>
-      
+      <ion-title text-center>Sign In</ion-title>
     </ion-toolbar>
   </ion-header>
   
-  <ion-content>
+  <ion-content color="light">
   
     <form [formGroup]="user" (ngSubmit)="onSubmit()">
-      <ion-list>
-        <ion-item lines="none" [ngClass]="{'is-invalid':user.controls.name.errors && (user.controls.name.touched || user.controls.name.dirty)}">
-          <ion-label color="primary" position="fixed">FullName</ion-label>
+      <ion-list lines="full">
+
+        <ion-item style="border-top:1px rgb(97, 97, 97);" [ngClass]="{'is-invalid':user.controls.name.errors && (user.controls.name.touched || user.controls.name.dirty)}">
+          <ion-label  position="fixed">FullName</ion-label>
           <ion-input type="text" formControlName="name"></ion-input>
         </ion-item>
         <span  class="is-invalid" id="error" *ngIf="user.controls.name.errors && (user.controls.name.touched || user.controls.name.dirty)">
@@ -23,8 +24,8 @@
           </span>
         </span>
 
-        <ion-item lines="none" [ngClass]="{'is-invalid':user.controls.email.errors && (user.controls.email.touched || user.controls.email.dirty)}">
-          <ion-label color="primary" position="fixed">Email Id</ion-label>
+        <ion-item  [ngClass]="{'is-invalid':user.controls.email.errors && (user.controls.email.touched || user.controls.email.dirty)}">
+          <ion-label  position="fixed">Email Id</ion-label>
           <ion-input type="email" formControlName="email"></ion-input>
         </ion-item>
         <span class="is-invalid" id="error" *ngIf="user.controls.email.errors && (user.controls.email.touched || user.controls.email.dirty)">
@@ -34,8 +35,8 @@
             <span *ngIf="user.controls.email.errors.email">Invalid email address</span>
           </span>
 
-        <ion-item lines="none" [ngClass]="{'is-invalid':user.controls.username.errors && (user.controls.username.touched || user.controls.username.dirty)}">
-          <ion-label color="primary" position="fixed">UserName</ion-label>
+        <ion-item  [ngClass]="{'is-invalid':user.controls.username.errors && (user.controls.username.touched || user.controls.username.dirty)}">
+          <ion-label  position="fixed">UserName</ion-label>
           <ion-input type="text" formControlName="username"></ion-input>
         </ion-item>
         <span class="is-invalid" id="error" *ngIf="user.controls.username.errors && (user.controls.username.touched || user.controls.username.dirty)">
@@ -44,8 +45,8 @@
             </span>
           </span>
 
-        <ion-item lines="none" [ngClass]="{'is-invalid':user.controls.password.errors && (user.controls.password.touched || user.controls.password.dirty)}">
-          <ion-label color="primary" position="fixed">Password</ion-label>
+        <ion-item lines="none"  [ngClass]="{'is-invalid':user.controls.password.errors && (user.controls.password.touched || user.controls.password.dirty)}">
+          <ion-label  position="fixed">Password</ion-label>
           <ion-input type="password" formControlName="password"></ion-input>
         </ion-item>
         <span class="is-invalid" id="error" *ngIf="user.controls.password.errors && (user.controls.password.touched || user.controls.password.dirty)">
@@ -57,14 +58,16 @@
             </span>
           </span>
 
-        <ion-item lines="none" text-center>
-          <p id="terms">I agree to the <i style="color:slateblue;" (click)="termspage()">Terms of Usage</i> and <i style="color:slateblue;" (click)="privacypage()">Privacy Policy</i></p>
-        </ion-item>
+        </ion-list>
 
-        <div>
-          <ion-button type="submit" style="font-size:18px;" strong color="tertiary" [disabled]="user.invalid" expand="block">Submit</ion-button>
+          <div class="terms" text-center>
+            I agree to the <u (click)="termspage()">Terms of Usage</u> and <u (click)="privacypage()">Privacy Policy </u> 
+          </div>
+
+        <div class="submit">
+          <ion-button style="height:50px;" type="submit" color="secondary" [disabled]="user.invalid" expand="full">Create New Account</ion-button>
         </div>
-      </ion-list>
+      
     </form>
   
   </ion-content>
