--- a/client/src/app/pages/termsconditions/termsconditions.page.html
+++ b/client/src/app/pages/termsconditions/termsconditions.page.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
-      <ion-buttons slot="start">
-          <ion-button color="danger" (click)="goback()"> 
-            <ion-icon name="arrow-back"></ion-icon>
+        <ion-buttons slot="start">
+          <ion-button color="danger" (click)="goback()">
+            <ion-icon name="arrow-back"></ion-icon> 
           </ion-button>
         </ion-buttons>
     <ion-title>Terms of Usage</ion-title>
@@ -12,7 +12,7 @@
 <ion-content padding id="content">
 
   <ion-card>
-    <ion-card-content id="ion-card-content">
+    <ion-card-content id="cardcontent">
       <h1>Introduction</h1>
       <p>
         These Website Standard Terms and Conditions written on this webpage shall manage your use of our website,
