--- a/client/src/app/pages/edit-info/edit-info.page.html
+++ b/client/src/app/pages/edit-info/edit-info.page.html
@@ -1,13 +1,14 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="light">
     <ion-buttons slot="start">
       <ion-button fill="clear" style="font-size:20px;" (click)="back()" color="danger" size="large">
-        <ion-icon slot="start" name="arrow-back"></ion-icon>
+        <ion-icon slot="start" name="close"></ion-icon>
       </ion-button>
     </ion-buttons>
-    
+    <ion-title text-center><span id="heading">Edit Info</span>
+    </ion-title>
     <ion-buttons slot="end">
-      <ion-button fill="clear" style="font-size:20px;" type="submit" (click)="closeEditInfoPage()" color="success"
+      <ion-button fill="clear" style="font-size:20px;" type="submit" color="success" (click)="closeEditInfoPage() "
         size="large">
         <ion-icon slot="end" name="arrow-forward"></ion-icon>
       </ion-button>
@@ -15,76 +16,67 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content color="light" *ngFor="let user of this.service.userData">
 
-  <ion-card *ngFor="let user of this.service.userData">
-    <ion-card-header>
-      <ion-card-title><ion-item lines="none"> <strong style="color:red;font-weight:bold;">USER PROFILE</strong> <ion-icon ion-button
-        color="tertiary" name="create" slot="end" (click)="editUser(user._id)"></ion-icon></ion-item>
-       
-      </ion-card-title>
-      <ion-card-subtitle></ion-card-subtitle>
-    </ion-card-header>
+  <div class="note">
+    <p text-center>
+      Attach the resume of fill out the fields below to help us connect you with employers!
+    </p>
+  </div>
 
-    <ion-card-content>
-      <ion-grid  color="secondary">
-          <ion-row hidden>
-              <ion-col size="4">
-                <ion-label>ID</ion-label>
-              </ion-col>
-              <ion-col size="4">{{user._id}}</ion-col>
-            </ion-row>
-        <ion-row>
-          <ion-col size="4">
-            <ion-label>FullName</ion-label>
-          </ion-col>
-          <ion-col size="8">{{user.name}}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="4">
-            <ion-label>UserName</ion-label>
-          </ion-col>
-          <ion-col size="8">{{user.username}}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="4">
-            <ion-label>Email Id</ion-label>
-          </ion-col>
-          <ion-col size="8">{{user.email}}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="4">
-            <ion-label>phone</ion-label>
-          </ion-col>
-          <ion-col size="8">{{user.phone}}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="4">
-            <ion-label>Location</ion-label>
-          </ion-col>
-          <ion-col size="8">{{user.location}}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="4">
-            <ion-label>Title</ion-label>
-          </ion-col>
-          <ion-col size="8">{{user.title}}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="4">
-            <ion-label>Company</ion-label>
-          </ion-col>
-          <ion-col size="8">{{user.company}}</ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col size="4">
-            <ion-label>Education</ion-label>
-          </ion-col>
-          <ion-col size="8">{{user.education}}</ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-card-content>
-  </ion-card>
+  <ion-item lines="full" class="resume">
+    <ion-label color="secondary" slot="start" id="label">
+      Import Resume
+    </ion-label>
+    <ion-button  color="secondary" slot="end" style="font-size:18px;" strong icon-only fill="clear">
+      <ion-icon id="upload" name="logo-dropbox"></ion-icon>
+    </ion-button>
+  </ion-item>
 
+
+  <ion-list>
+
+    <ion-item lines="full">
+      <ion-label>FullName</ion-label>
+      <ion-input type="email" [value]="user.name" readonly></ion-input>
+      <ion-icon name="create" slot="end" color="tertiary" (click)="editUser(user._id)"></ion-icon>
+    </ion-item>
+    <ion-item lines="full">
+      <ion-label>UserName</ion-label>
+      <ion-input type="email" [value]="user.username"></ion-input>
+    </ion-item>
+    <ion-item lines="full">
+      <ion-label>Email Id</ion-label>
+      <ion-input type="email" [value]="user.email"></ion-input>
+    </ion-item>
+    <ion-item lines="full">
+      <ion-label>phone</ion-label>
+      <ion-input type="email" [value]="user.phone"></ion-input>
+    </ion-item>
+    <ion-item lines="full">
+      <ion-label>Location</ion-label>
+      <ion-input type="email" [value]="user.location"></ion-input>
+    </ion-item>
+    <ion-item lines="full">
+      <ion-label>Title</ion-label>
+      <ion-input type="email" [value]="user.title"></ion-input>
+    </ion-item>
+    <ion-item lines="full">
+      <ion-label>Company</ion-label>
+      <ion-input type="email" [value]="user.company"></ion-input>
+    </ion-item>
+    <ion-item lines="none">
+      <ion-label>Education</ion-label>
+      <ion-input type="email" [value]="user.education"></ion-input>
+    </ion-item>
+  </ion-list>
+  <ion-grid style="height:5px;">
+    <ion-row hidden>
+      <ion-col size="5">
+        <ion-label>ID</ion-label>
+      </ion-col>
+      <ion-col size="5">{{user._id}}</ion-col>
+    </ion-row>
+  </ion-grid>
 
 </ion-content>
