--- a/client/src/app/pages/feeds/feeds.page.scss
+++ b/client/src/app/pages/feeds/feeds.page.scss
@@ -1,16 +1,4 @@
 
-    .dropdown {
-        position: absolute;
-        z-index: 1;
-        background-color: whitesmoke;
-        width: 84%;
-        max-height: 150px;
-        margin-left: 5px;
-        left: 10px;
-        overflow-y: auto;
-        border: 0.55px solid grey;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    }
     #card-stack {
       position: relative;
         width: 100%;
@@ -27,20 +15,229 @@
       .parent {
         position: relative;
       }
-    #image {
+    ion-img {
+  width: 100%;
   display: block;
   margin:auto;
-  margin-top:10px;
-  width: 90%;
-  height: 90%;;
 }
   .child {
     position: absolute;
+    color:white;
+    width: 100%;
+    display: block;
+    bottom: 2%;
+  }
+  .child #cname {
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+   #name {
+    font-size: 15px;
+  }
+
+
+@media screen and (max-width:360px) {
+
+  .child #cname {
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+  .child #name {
+    font-size: 15px;
+  }
+
+  div.container {
+    width: 100%;
+    margin: 5px;
+  }
+  .label {
     font-weight: bold;
     font-size: 15px;
-    color:white;
-    top :70%;
-    left:40%;
-    transform: translate(-70%,-40%);
+    margin-right: 15px;
+    float: left;
+    color: black;
+    padding: 3px 0px;
   }
+  .des {
+    color: grey;
+    font-size: 15px;
+    word-wrap: break-word;
+    text-align: left;
+    padding: 3px 0px;
+  }
+}
+
+@media screen and (min-width:375px) {
+
+  .child #cname {
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+  .child #name {
+    font-size: 15px;
+  }
+
+  div.container {
+    width: 100%;
+    margin: 10px;
+  }
+  .label {
+    font-weight: normal;
+    font-size: 15px;
+    margin-right: 15px;
+    float: left;
+    color: black;
+    padding: 5px 0px;
+  }
+  .des {
+    color: grey;
+    font-size: 16px;
+    font-weight: normal;
+    word-wrap: break-word;
+    text-align: left;
+    padding: 5px 0px;
+  }
+}
+
+@media screen and (min-width:410px) {
+
+  .child #cname {
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .child #name {
+    font-size: 17px;
+  }
+
+  div.container {
+    width: 100%;
+    margin: 10px;
+  }
+  .label {
+    font-weight: normal;
+    font-size: 16px;
+    margin-right: 25px;
+    float: left;
+    color: black;
+    padding: 6px 0px;
+  }
+  .des {
+    color: grey;
+    font-size: 18px;
+    font-weight: normal;
+    word-wrap: break-word;
+    text-align: left;
+    padding: 6px 0px;
+  }
+}
+
+@media screen and (min-width:768px) {
+
+  .child {
+    left: 2%;
+  }
+  #mic,#filter {
+    font-size: 20px;
+  }
+
+  .child #cname {
+    font-size: 28px;
+    font-weight: bold;
+    left: 2%;
+  }
+
+  .child #name {
+    font-size: 24px;
+    left: 2%;
+  }
+
+  div.container {
+    width: 100%;
+    margin: 20px;
+  }
+  .label {
+    font-weight: bold;
+    font-size: 24px;
+    margin-right: 30px;
+    float: left;
+    color: black;
+    padding: 5px 0px;
+  }
+  .des {
+    color: grey;
+    font-size: 26px;
+    word-wrap: break-word;
+    text-align: left;
+    padding: 5px 0px;
+  }
+}
+
+@media screen and (min-width:992px) {
+
+  #mic,#filter {
+    font-size: 25px;
+  }
+
+  .child #cname {
+    font-size: 35px;
+    font-weight: bold;
+    left: 2%;
+  }
+
+  .child #name {
+    font-size: 30px;
+    left: 2%;
+  }
+
+  div.container {
+    width: 100%;
+    margin: 25px;
+  }
+  .label {
+    font-weight: bold;
+    font-size: 30px;
+    margin-right: 35px;
+    float: left;
+    color: black;
+    padding: 10px 0px;
+  }
+  .des {
+    color: grey;
+    font-size: 32px;
+    word-wrap: break-word;
+    text-align: left;
+    padding: 10px 0px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+//   .dropdown {
+//     position: absolute;
+//     z-index: 1;
+//     background-color: whitesmoke;
+//     width: 84%;
+//     max-height: 150px;
+//     margin-left: 5px;
+//     left: 10px;
+//     overflow-y: auto;
+//     border: 0.55px solid grey;
+//     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+// }
+
+
+
 
