--- a/client/src/app/pages/home/home.page.scss
+++ b/client/src/app/pages/home/home.page.scss
@@ -1,66 +1,469 @@
 ion-content {
     position: relative;
 }
-#signin {
-    font-weight: bold;
-    font-size: 18px;
+
+
+.signin {
+    position: relative;
+    background-color: #06a3b4;
+    top: 0px;
+    width: 100%;
+    height: 22px;
+    border-radius: 2px;
+}
+.org {
     position: absolute;
-    top: 5px;
+    top : -7px;
+    left: 10px;
+    font-size: 12px;
+    color: #f2f2f2;
+}
+
+.btn1 {
+    position: absolute;
+    top : 5px;
     right: 5px;
-}
-#cologo {
-    width:60%;
-    height: 200px;
-    position: absolute;
-    top:10%;;
-    left :50%;
-    transform: translate(-50%,-10%);
+    font-size: 12px;
+    color: #f2f2f2;
 }
 
-#caption {
-    color:#0bb8cc;
-    font-size: bold;
-    width:60%;
+.cologo {
     position: absolute;
-    top :25%;
-    left: 20%;
-    text-align: center;
+    top : 160px;
+    width: 80%;
+    display:block;
+    margin-left:10%;
+    margin-right:10%;
 }
 
-#linkedin {
-    width:60%;
-    height: 15%;
+.caption {
     position: absolute;
-    top : 45%;
-    left: 45%;
-    transform: translate(-45%,-45%);
+    top : 160px;
+    width: 60%;
+    display:block;
+    margin-left: 20%;
+    margin-right: 20%; 
+    margin-top :100px;
 }
-
-#facebook {
-    width:63%;
-    height: 15%;
-    position: absolute;
-    top :55%;
-    left:51%;
-    transform: translate(-55%,-51%);
-}
-
-#terms {
-    width: 62%;
-    font-size:13px;
+.caption p {
+    color: #06a3b4;
+    font-size: 14px;
     font-weight: bold;
-    position: absolute;
-    top : 60%;
-    left:55%;
-    transform: translate(-60%,-55%);
-    text-align: center;
+    
 }
 
-#signup {
-    position: absolute;
-    top : 70%;
-    left:50%;
-    transform: translate(-50%,-70%);
-    font-size: 20px;
-    font-weight: bold;
+.linkedin {
+    margin-bottom: 18px;
 }
+
+.linkedin {
+    position: absolute;
+    bottom: 220px;
+    width: 85%;
+    display:block;
+    margin-left:7.5%;
+    margin-right:7.5%;
+    height: 5px;
+}
+
+.facebook {
+    position: absolute;
+    bottom: 180px;
+    width: 85%;
+    display:block;
+    margin-left:7.5%;
+    margin-right:7.5%;
+    height: 5px;
+}
+
+
+.terms {
+    font-size: 12px;
+    position: absolute;
+    width: 90%;
+    display:block;
+    margin-left: 5%;
+    margin-right: 5%;
+    bottom : 90px;
+    color:rgb(87, 86, 86);
+}
+
+.signup {
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    height: 45px;
+    background-color: #06a3b4;
+    color: #f2f2f2;
+}
+
+@media only screen and (max-width : 320px) {
+    .caption {
+        position: absolute;
+        top : 160px;
+        width: 60%;
+        display:block;
+        margin-left: 20%;
+        margin-right: 20%; 
+        margin-top :100px;
+    }
+    .caption p {
+        font-size: 12px;
+    }
+}
+
+@media only screen and (min-width : 576px) {
+
+    ion-content {
+        position: relative;
+    } 
+
+    .signin {
+        position: relative;
+        background-color: #06a3b4;
+        top: 0px;
+        width: 100%;
+        height: 22px;
+        border-radius: 2px;
+    }
+    .org {
+        position: absolute;
+        top : -8px;
+        left: 10px;
+        font-size: 12px;
+        color: #f2f2f2;
+    }
+    
+    .btn1 {
+        position: absolute;
+        top : -10px;
+        right: 0px;
+        font-size: 12px;
+    }
+
+    .caption {
+        position: absolute;
+        top : 340px;
+        width: 45%;
+        display:block;
+        margin-left: 27.5%;
+        margin-right: 27.5%; 
+        margin-top : 120px;
+    }
+    .caption p {
+        color: #06a3b4;
+        font-size: 24px;
+        font-weight: bold;
+    }
+    
+    .linkedin {
+        position: absolute;
+        bottom: 200px;
+        width: 90%;
+        display:block;
+        margin-left: 5%;
+        margin-right: 5%;
+        height: 5px;
+        border-radius: 20px;
+    }
+    
+    
+    
+    .facebook {
+        position: absolute;
+        bottom: 140px;
+        width: 90%;
+        display:block;
+        margin-left: 5%;
+        margin-right: 5%;
+        height: 5px;
+        border-radius: 20px;
+    }
+    
+    
+    .terms {
+        font-size: 12px;
+        position: absolute;
+        width: 70%;
+        display: block;
+        margin-left:15%;
+        margin-right: 15%;
+        bottom : 90px;
+        color:rgb(87, 86, 86);
+    }
+    
+    .signup {
+        position: absolute;
+        bottom: 0px;
+        width: 100%;
+        height: 55px;
+        background-color: #06a3b4;
+        color: #f2f2f2;
+    }
+
+}
+
+@media only screen and (min-width: 768px) {
+    ion-content {
+        position: relative;
+    } 
+
+    .signin {
+        position: relative;
+        background-color: #06a3b4;
+        top: 0px;
+        width: 100%;
+        height: 45px;
+        border-radius: 2px;
+    }
+    .org {
+        position: absolute;
+        top : -12px;
+        left: 10px;
+        font-size: 22px;
+        font-weight: bold;
+        color: #f2f2f2;
+    }
+    
+    .btn1 {
+        position: absolute;
+        right: 5px;
+        top : 10px;
+        font-size: 22px;
+        font-weight: bold
+    }
+
+    .cologo {
+        position: absolute;
+        top : 290px;
+        width: 60%;
+        display:block;
+        margin-left: 20%;
+        margin-right: 20%; 
+    }
+
+    .caption {
+        position: absolute;
+        top : 340px;
+        width: 45%;
+        display:block;
+        margin-left: 27.5%;
+        margin-right: 27.5%; 
+        margin-top : 120px;
+    }
+    .caption p {
+        color: #06a3b4;
+        font-size: 24px;
+        font-weight: bold;
+    }
+
+    .linkedin {
+        margin-bottom: 20px;
+    }
+
+    .linkedin {
+        position: absolute;
+        bottom: 300px;
+        width: 60%;
+        display:block;
+        margin-left: 20%;
+        margin-right: 20%;  
+    }
+    
+    .facebook {
+        position: absolute;
+        bottom: 240px;
+        width: 60%;
+        display:block;
+        margin-left: 20%;
+        margin-right: 20%; 
+        height: 5px;
+    }
+
+    .terms {
+        font-size: 18px;
+        position: absolute;
+        width: 60%;
+        display:block;
+        margin-left: 20%;
+        margin-right: 20%; 
+        bottom : 120px;
+        color:rgb(87, 86, 86);
+    }
+
+
+    .signup {
+        position: absolute;
+        border-radius: 5px;
+        height: 60px;
+        background-color: #06a3b4;
+        color: #f2f2f2;
+    }
+
+    span {
+        font-size: 25px;
+    }
+    
+  }
+
+ 
+
+  @media only screen and (min-width : 992px){
+    ion-content {
+        position: relative;
+    } 
+
+    .signin {
+        position: relative;
+        background-color: #06a3b4;
+        top: 0px;
+        width: 100%;
+        height: 60px;
+        border-radius: 2px;
+    }
+    .org {
+        position: absolute;
+        top : -16px;
+        left: 10px;
+        font-size: 28px;
+        font-weight: bold;
+        color: #f2f2f2;
+    }
+    
+    .btn1 {
+        position: absolute;
+        right: 10px;
+        top: 15px;
+        font-size: 28px;
+        font-weight: bold
+    }
+
+    .cologo {
+        position: absolute;
+        top : 390px;
+        width: 60%;
+        display:block;
+        margin-left: 20%;
+        margin-right: 20%;
+    }
+
+    .caption {
+        position: absolute;
+        top : 440px;
+        width: 100%;
+        display:block;
+        margin-left: 0%;
+        margin-right:0%;
+        margin-top:150px;
+       
+    }
+    .caption p {
+        color: #06a3b4;
+        font-size: 30px;
+        font-weight: bold;
+    }
+
+    .linkedin {
+        margin-bottom: 60px;
+    }
+
+    .linkedin {
+        position: absolute;
+        bottom: 400px;
+        width: 60%;
+        display:block;
+        margin-left: 20%;
+        margin-right: 20%;  
+    }
+    
+    .facebook {
+        position: absolute;
+        bottom: 350px;
+        width: 60%;
+        display:block;
+        margin-left: 20%;
+        margin-right: 20%; 
+        height: 5px;
+    }
+
+    .terms {
+        font-size: 24px;
+        position: absolute;
+        width: 60%;
+        display:block;
+        margin-left: 20%;
+        margin-right: 20%; 
+        bottom : 180px;
+        color:rgb(87, 86, 86);
+    }
+
+
+    .signup {
+        position: absolute;
+        border-radius: 5px;
+        height: 80px;
+        background-color: #06a3b4;
+        color: #f2f2f2;
+    }
+
+    span {
+        font-size: 35px;
+    }
+    
+  }
+
+  @media only screen and (min-width : 1200px){
+    ion-content {
+        position: relative;
+    } 
+
+
+    .linkedin {
+        position: absolute;
+        bottom: 220px;
+        width: 15%;
+        height: 20px;
+        display:block;
+        margin-left: 42.5%;
+        margin-right: 42.5%;
+    }
+    
+    
+    
+    .facebook {
+        position: absolute;
+        bottom: 170px;
+        width: 15%;
+        display:block;
+        margin-left: 42.5%;
+        margin-right: 42.5%;
+        height: 30px;
+    }
+
+    .terms {
+        font-size: 8px;
+        position: absolute;
+        width: 15%;
+        display:block;
+        margin-left: 42.5%;
+        margin-right: 42.5%;
+        bottom : 140px;
+        color:rgb(163, 158, 158);
+    }
+
+
+    .signup {
+        position: absolute;
+        bottom: 90px;
+        border-radius: 5px;
+        width: 15%;
+        height: 20px;
+        display:block;
+        margin-left: 42.5%;
+        margin-right: 42.5%;
+        height: 30px;
+        background-color: #06a3b4;
+        color: #f2f2f2;
+    }
+    
+  }
