--- a/client/src/app/pages/jobdetail/jobdetail.page.html
+++ b/client/src/app/pages/jobdetail/jobdetail.page.html
@@ -1,82 +1,101 @@
-<ion-header no-border>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-button fill="clear" style="font-size:15px;" color="tertiary" (click)="minimizePage()">
-        <ion-icon slot="icon-only" name="arrow-dropleft"></ion-icon>
-      </ion-button>
-      <ion-title style="color:#6a0574;font-size: 20px; display:block;margin-left:atuo;margin-right:auto;">JOB DETAILS
-      </ion-title>
-
-      <ion-button fill="clear" style="font-size:15px;" color="tertiary" (click)="moreOptions()">
-        <ion-icon slot="icon-only" name="more"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content color="light">
 
-
-  <div class="sticky"></div>
-  <div id="container">
-    <img src="assets/imgs/lap.jpg" style="height: 210px;width: 100%">
-    <div id="imgbot1">{{ company }}</div>
-    <div id="imgbot2">{{ jobtitle }}</div>
-    <div id="imgbot3">opportunity: intelligent and great</div>
+    
+  <div class="container bg-image"> 
+    <div class="inner">
+      <ion-grid no-padding>
+        <ion-row>
+          <ion-col size="12">
+            <div class="cname">
+              {{company}}
+            </div>
+          </ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col size="8">
+            <div class="name">{{jobtitle}}</div>
+            <div class="name">opportunity : intelligent and great</div>
+          </ion-col>
+          <ion-col size="4" class="ion-align-self-end">
+            <div class="name" text-right>2 days ago</div>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
 
   </div>
-  <div>
+
+      
+  <div class="btn1">
+        <ion-button id="btn1" fill="clear" slot="start"  color="secondary" (click)="minimizePage()">
+          <ion-icon slot="icon-only" name="arrow-dropdown-circle"></ion-icon>
+        </ion-button>
+      </div>
+      <div class="btn2">
+        <ion-button id="btn2" fill="clear" slot="end" color="secondary"
+          (click)="moreOptions()">
+          <ion-icon slot="icon-only" name="more"></ion-icon>
+        </ion-button>
+    </div>
+    
+
+  
+
+ 
+
+  <div class="ion-card">
     <ion-card>
-      <ion-item class="ion-item">
+      <ion-card-header class="bg-color">
         <h6>Basic Info</h6>
-      </ion-item>
-      <ion-card-content>
+      </ion-card-header>
+      <ion-card-content class="bg-color1">
         <ion-grid>
-          <ion-row>
-            <ion-col class="txt lf">Date posted</ion-col>
-            <ion-col class="txt rf">4 days ago</ion-col>
+          <ion-row >
+            <ion-col size="5"><div class="txtlf"><h6>Date Posted</h6></div></ion-col>
+            <ion-col size="6"><div class="txtrf">4 days ago</div></ion-col>
           </ion-row>
           <ion-row>
-            <ion-col class="txt lf">Location</ion-col>
-            <ion-col class="txt rf">{{ location }}</ion-col>
+            <ion-col size="5"><div class="txtlf"><h6>Location</h6></div></ion-col>
+            <ion-col size="6"><div class="txtrf">{{location}}</div></ion-col>
           </ion-row>
           <ion-row>
-            <ion-col class="txt lf">Type</ion-col>
-            <ion-col class="txt rf">{{ jobtype }}</ion-col>
+            <ion-col size="5"><div class="txtlf"><h6>Type</h6></div></ion-col>
+            <ion-col size="6"><div class="txtrf">{{jobtype}}</div></ion-col>
           </ion-row>
           <ion-row>
-            <ion-col class="txt lf">Salary</ion-col>
-            <ion-col class="txt rf">Competitive salary</ion-col>
+            <ion-col size="5"><div class="txtlf"><h6>Salary</h6></div></ion-col>
+            <ion-col size="6"><div class="txtrf">Competitive Salary</div></ion-col>
           </ion-row>
         </ion-grid>
       </ion-card-content>
     </ion-card>
   </div>
-  <div>
+  <div class="ion-card1">
     <ion-card>
-      <ion-card-header class="ion-item">
-        <ion-item>Details</ion-item>
+      <ion-card-header class="bg-color">
+        <h6>Details</h6>
       </ion-card-header>
-      <ion-card-content>
-        <div class="ds">
-          {{ jobdescription }}
+      <ion-card-content class="bg-color2">
+        <div class="ion-padding ion-text-justify" style="text-indent:40px;">
+          {{jobdescription}}
         </div>
       </ion-card-content>
     </ion-card>
 
   </div>
-  <p class="sm">Listed from</p>
-  <p class="tag">STEPFOURWARD</p>
+  <p text-center>Listed from</p>
+  <h5 text-center>STEPFOURWARD</h5> 
 
 </ion-content>
 
 <ion-footer>
 
   <ion-toolbar>
-    <div id="buttons">
-      <ion-button color="danger" strong (click)="cancelbtn()">Pass</ion-button>
-      <ion-button color="success" strong (click)="applyjob()">Apply</ion-button>
+    <div class="btns">
+      <ion-button class="tbtn" color="danger" strong (click)="cancelbtn()">Pass</ion-button>
+      <ion-button class="tbtn" color="success" strong (click)="applyjob()">Apply</ion-button>
     </div>
   </ion-toolbar>
 
 </ion-footer>
+
