--- a/client/src/app/pages/login/login.page.html
+++ b/client/src/app/pages/login/login.page.html
@@ -1,19 +1,25 @@
 <ion-header>
-    <ion-toolbar>
+    <ion-toolbar color="light">
         <ion-buttons slot="start">
-            <ion-button (click)="goback()" color="primary">
-                <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
+            <ion-button id="btn" (click)="goback()" color="secondary">
+                <ion-icon slot="icon-only" name="close"></ion-icon>
               </ion-button>
           </ion-buttons>
+          <ion-buttons slot="end">
+              <ion-button (click)="onSubmit()" color="secondary" [disabled]="usercred.invalid">
+                  <ion-icon slot="icon-only" name="arrow-round-forward"></ion-icon>
+                </ion-button>
+            </ion-buttons>
     </ion-toolbar>
   </ion-header>
   
-  <ion-content padding>
+  <ion-content no-padding color="light">
   
     <form [formGroup]="usercred" (ngSubmit)="onSubmit()">
-        <ion-item lines="none" [ngClass]="{'is-invalid':usercred.controls.username.errors && (usercred.controls.username.touched || usercred.controls.username.dirty)}">
-          <ion-label color="secondary" position="fixed">{{ readUsernames ? "Reading...": 'Username' }}</ion-label>
-            <ion-input type="text" formControlName="username" (ngModelChange)="readUserName()"></ion-input>
+      <ion-list lines="full">
+        <ion-item [ngClass]="{'is-invalid':usercred.controls.username.errors && (usercred.controls.username.touched || usercred.controls.username.dirty)}">
+          <ion-label color="dark"  position="fixed">{{ readUsernames ? "Reading...": 'Username' }}</ion-label>
+            <ion-input color="dark" type="text" formControlName="username" (ngModelChange)="readUserName()"></ion-input>
           </ion-item>
           <span class="is-invalid" id="error" *ngIf="usercred.controls.username.errors && (usercred.controls.username.touched || usercred.controls.username.dirty)">
             <span *ngIf="usercred.controls.username.errors.required">
@@ -21,8 +27,8 @@
             </span>
           </span>
           <ion-item lines="none" [ngClass]="{'is-invalid':usercred.controls.password.errors && (usercred.controls.password.touched || usercred.controls.password.dirty)}">
-            <ion-label color="secondary" position="fixed">{{ readPswd ? "Reading...": 'Password' }}</ion-label>
-            <ion-input type="password" formControlName="password" (ngModelChange)="readPassword()"></ion-input>
+            <ion-label color="dark" position="fixed">{{ readPswd ? "Reading...": 'Password' }}</ion-label>
+            <ion-input color="dark" type="password" formControlName="password" (ngModelChange)="readPassword()"></ion-input>
           </ion-item>
           <span class="is-invalid" id="error" *ngIf="usercred.controls.password.errors && (usercred.controls.password.touched || usercred.controls.password.dirty)">
             <span *ngIf="usercred.controls.password.errors.required">
@@ -32,9 +38,10 @@
               Password must be greater than 6 characters and less than 10 characters
             </span>
           </span>
+        </ion-list>
           <div>
-            <ion-button type="submit" color="success" [disabled]="usercred.invalid" expand="block">Submit</ion-button>
-            <ion-button strong type="button" size="large" fill="clear" expand="block" color="danger" (click)="forgotPassword()">FORGOT PASSWORD</ion-button>
+            <ion-button class="submit" type="submit" color="secondary" [disabled]="usercred.invalid" expand="full">Submit</ion-button>
+            <ion-button class="forgot" strong type="button"  fill="clear" expand="full" color="danger" (click)="forgotPassword()">FORGOT PASSWORD</ion-button>
           </div>
     </form>
   
