--- a/client/src/app/pages/login/login.page.scss
+++ b/client/src/app/pages/login/login.page.scss
@@ -6,23 +6,85 @@
     font-size: 14px;
 }
 
-ion-label {
-    margin-right : 20px;
-}
 
 ion-list {
-    
-    margin:15px;
+    margin-top:25px;
 }
 
 ion-item {
-    border :1px solid whitesmoke;    
-    background-color: blanchedalmond;
-    font-size: 15px;
-    font-weight: bold;
-    border-radius: 10%;
+    font-size: 16px;
+    font-weight: 100;
 }
 
-ion-input {
-    color: green;
+div > .submit {
+    width: 80%;
+    margin-right:10%;
+    margin-left:10%;
+    margin-top: 40px;
 }
+
+@media only screen and (min-width : 768px){
+
+    #btn {
+        font-size: 35px;
+        font-weight: bold;
+    }
+
+    ion-item {
+        font-size: 20px;
+        font-weight: bold;
+        color:rgb(0,0,0);
+    }
+
+    ion-label {
+        margin-right: 35px;
+    }
+
+    div > .submit {
+        width: 80%;
+        margin-right:10%;
+        margin-left:10%;
+        margin-top: 40px;
+        font-size: 25px;
+    }
+
+    div > .forgot {
+        font-size: 20px;
+    }
+
+    #error {
+        font-size: 20px;
+        display: flex;
+    }
+}
+
+@media only screen and (min-width : 992px){
+    ion-item {
+        font-size: 20px;
+        font-weight: bold;
+        color:rgb(0,0,0);
+    }
+
+    ion-label {
+        margin-right: 35px;
+    }
+
+    div > .submit {
+        width: 80%;
+        margin-right:10%;
+        margin-left:10%;
+        margin-top: 60px;
+        font-size: 25px;
+    }
+
+    div > .forgot {
+        font-size: 20px;
+    }
+
+    #error {
+        font-size: 20px;
+        display: flex;
+    }
+}
+
+
