--- a/client/src/app/pages/matches/matches.page.html
+++ b/client/src/app/pages/matches/matches.page.html
@@ -14,15 +14,15 @@
 <ion-content>
 
   <ion-tabs>
-    <ion-tab-bar slot="top">
+    <ion-tab-bar slot="top" selectedIndex="2">
       <ion-tab-button tab="matches/applied">
-        <ion-label>APPLIED</ion-label>
+        <ion-label>Applied</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="matches/failed">
-        <ion-label>FAILED</ion-label>
+        <ion-label>Failed</ion-label>
       </ion-tab-button>
       <ion-tab-button tab="matches/saved">
-        <ion-label>SAVED</ion-label>
+        <ion-label>Saved</ion-label>
       </ion-tab-button>
 
     </ion-tab-bar>
