--- a/client/src/app/pages/matches/matches.page.scss
+++ b/client/src/app/pages/matches/matches.page.scss
@@ -1,5 +1,24 @@
 ion-label {
-font-size: 15px;
+font-size: 16px;
 font-weight: bold;
 }
 
+
+
+@media screen and (min-width : 768px){
+    ion-label {
+        font-size: 30px;
+        font-weight: bold;
+    }
+}
+
+@media screen and (min-width : 992px){
+    ion-label {
+        font-size: 35px;
+        font-weight: bold;
+    }
+
+    ion-searchbar {
+        font-size: 25px;
+    }
+}
