--- a/client/src/app/pages/signup/signup.page.scss
+++ b/client/src/app/pages/signup/signup.page.scss
@@ -1,3 +1,4 @@
+
 #terms {
     font-size:15px;
     font-weight: bold;
@@ -19,24 +20,138 @@
 
 
 ion-label {
-    margin-right : 20px;
+    margin-right : 10px; 
 }
 
 ion-list {
-    
-    margin:15px;
+    width: 100%;
+    margin-top : 25px;
+    border : 1px solid #f2f2f2;
 }
 
 ion-item {
-    border :1px solid whitesmoke;    
-    background-color: blanchedalmond;
-    font-size: 15px;
-    font-weight: bold;
-    border-radius: 10%;
+    background-color: #f1f1f1;
+    font-size: 16px;
+    color:black;
 }
 
-ion-input {
-    color: darkorchid;
+.terms {
+    font-size: 11px;
+    width: 80%;
+    display: block;
+    margin-left:10%;
+    margin-right: 10%;
+    margin-top : 20px;
+    margin-bottom : 20px;
+    color:rgb(87, 86, 86);
+}
+
+
+ion-title { 
+    color:black;
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+.submit {
+    width: 90%;
+    display: block;
+    margin-left: 5%;
+    margin-right:5%;
+}
+
+@media only screen and ( min-width : 768px) {
+    ion-toolbar {
+        padding: 10px;
+
+    }
+    ion-title { 
+        font-size: 25px;
+        font-weight: bold;
+        color:rgb(0, 0, 0);
+        margin-right: 10px;
+        margin-top: 10px;
+    }
+
+    .terms {
+        font-size: 20px;
+        width: 80%;
+        display: block;
+        margin-left:10%;
+        margin-right: 10%;
+        margin-top : 20px;
+        margin-bottom : 20px;
+        color:rgb(53, 52, 52);
+    }
+
+    ion-item {
+        font-size: 20px;
+        font-weight: bold;
+        color:black;
+    }
+
+    ion-input {
+        margin-left: 35px;
+    }
+
+    .submit >
+        ion-button {
+            font-size: 30px;
+            height: 45px;
+        }
+        #error {
+            font-size: 20px;
+            display: flex;
+        }
+
+}
+
+@media only screen and ( min-width : 992px) {
+    ion-toolbar {
+        padding: 20px;
+    }
+
+    ion-title { 
+        color:black;
+        font-weight: bold;
+        font-size: 30px;
+        margin-top: 10px;
+        margin-right: 10px;
+    }
+
+    ion-item {
+        border :1px solid whitesmoke;    
+        background-color: blanchedalmond;
+        font-size: 20px;
+        font-weight: bold;
+        border-radius: 10%;
+        }
+
+    ion-input {
+        margin-right: 35px;
+    }
+
+    .terms {
+        font-size: 25px;
+        width: 80%;
+        display: block;
+        margin-left:10%;
+        margin-right: 10%;
+        margin-top : 25px;
+        margin-bottom : 20px;
+        color:rgb(43, 42, 42);
+    }
+
+    .submit >
+        ion-button {
+            font-size: 30px;
+            height: 45px;
+        }
+        #error {
+            font-size: 20px;
+            display: flex;
+        }
+    
 }
 
 
