--- a/client/src/app/pages/slides/slides.page.scss
+++ b/client/src/app/pages/slides/slides.page.scss
@@ -5,38 +5,135 @@
 }
 ion-slides{
 	position: relative;
-	top: 100px;
+	top: 30px;
+	height: inherit;
 }
 ion-button {
 	position: absolute;
 	top : 0;
 	right: 0;
+	font-size: 12px;
+	line-height: 0.5cm;
 }
-ion-slide {
-	width: 100%;
-	height: 100%;
-	position: relative;
-}
+
 ion-slide #one {
 	position: absolute;
 	top : 0;
 }
 
-#para {
+h6 {
+	font-size: 14px;
+	color: #f2f2f2;
+	width: 100%;
 	line-height: 0.5cm;
-	font-size: 15px;
-	color: white;
-	text-align: center;
-	opacity: 0.8;
+}
+
+p {
+	font-size: 14px;
+	color: #989aa2;
+	width: 80%;
+	margin-left: 10%;
+	margin-right: 10%;
+	line-height: 0.5cm;
+}
+
+ion-img {
+	width: 70%;
+	margin-left: 15%;
+	margin-right: 15%;
+	height: 70%;
+	margin-top: 15px;
+
 }
 
 .swiper-pagination-bullet-active {
-	background-color: white;
+	background-color: dodgerblue;
 }
 .swiper-container-horizontal > .swiper-pagination-bullets .swiper-pagination-bullet {
-	margin: 0px 10px 0px;
+	margin: 30px 10px 0px;
 }
 
+@media only screen and (min-width:768px) {
+
+	ion-slides{
+		position: relative;
+		top: 50px;
+		height: inherit;
+	}
+
+	ion-button {
+		position: absolute;
+		top : 0;
+		right: 0;
+		font-size: 22px;
+		line-height: 0.5cm;
+	}
+	h6 {
+		font-size: 25px;
+		color: #f2f2f2;
+		width: 100%;
+		line-height: 0.5cm;
+	}
+	
+	p {
+		font-size: 22px;
+		color: #989aa2;
+		width: 70%;
+		margin-left: 15%;
+		margin-right: 15%;
+		line-height: 1.0cm;
+	}
+	
+	ion-img {
+		width: 60%;
+		margin-left: 20%;
+		margin-right: 20%;
+		height: 70%;
+	
+	}
+	
+}
+
+@media only screen and (min-width:992px) {
+
+	ion-slides{
+		position: relative;
+		top: 80px;
+		height: inherit;
+	}
+
+	ion-button {
+		position: absolute;
+		top : 0;
+		right: 0;
+		font-size: 30px;
+		line-height: 0.5cm;
+	}
+	h6 {
+		font-size:30px;
+		color: #f2f2f2;
+		width: 100%;
+		line-height: 0.5cm;
+	}
+	
+	p {
+		font-size: 30px;
+		color: #989aa2;
+		width: 70%;
+		margin-left: 15%;
+		margin-right: 15%;
+		line-height: 1.0cm;
+	}
+	
+	ion-img {
+		width: 60%;
+		margin-left: 20%;
+		margin-right: 20%;
+		height: 70%;
+	
+	}
+	
+}
 
 
     
