--- a/client/src/app/pages/termsconditions/termsconditions.page.scss
+++ b/client/src/app/pages/termsconditions/termsconditions.page.scss
@@ -1,9 +1,63 @@
-page-termsofusage {
+
     #content {
-        background-color: whitesmoke;
+        background-color: #FFFFFF;
     }
     #cardcontent {
         color: grey;
-        font-size: 12px;
+        font-size: 14px;
     }
-}
+
+    h1 {
+        color: black;
+        font-weight: bold;
+    }
+
+    @media screen and (min-width:768px){
+
+        ion-toolbar {
+            padding: 20px;
+            align-self: center;
+            margin-top: 10px;
+            font-size: 25px;
+        }
+    
+        ion-title {
+            font-size: 30px;
+            font-weight: bold;
+        }
+        h1 {
+            font-size: 30px;
+            font-weight: bold;
+        }
+       p{
+            font-size: 22px;
+        }
+        ion-button {
+            font-size: 25px;
+        }
+    }
+    
+    @media screen and (min-width:992px){
+    
+        ion-toolbar {
+            padding: 20px;
+            align-self: center;
+            margin-top: 15px;
+            font-size: 35px;
+        }
+    
+        ion-title {
+            font-size: 35px;
+            font-weight: bold;
+        }
+        h1 {
+            font-size: 40px;
+            font-weight: bold;
+        }
+       p{
+            font-size: 32px;
+        }
+        ion-button {
+            font-size: 25px;
+        }
+    }
