--- a/client/src/app/pages/update/update.page.scss
+++ b/client/src/app/pages/update/update.page.scss
@@ -6,24 +6,112 @@
     font-size: 14px;
 }
 
-
-ion-label {
-    margin-right : 20px;
+ion-title {
+    font-size: 15px;
+    font-weight: bold;
 }
 
-ion-list {
-    
-    margin:15px;
+
+ion-input {
+    margin-left : 20px;
 }
 
 ion-item {
     border :1px solid whitesmoke;    
     background-color: blanchedalmond;
     font-size: 15px;
-    font-weight: bold;
     border-radius: 10%;
 }
 
-ion-input {
-    color: darkorchid;
+.btn {
+    width: 80%;
+    display:block;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 30px;
+}
+
+@media only screen and (min-width : 768px){
+    ion-toolbar {
+        padding: 10px;
+        
+    }
+     ion-title {
+        margin-top: 10px;
+        font-size: 30px;
+        font-weight: bold;
+    }
+    ion-list {
+        margin-top: 25px;
+    }
+
+    ion-input {
+        margin-left : 30px;
+    }
+
+    ion-item {
+    border :1px solid whitesmoke;    
+    background-color: blanchedalmond;
+    font-size: 25px;
+    color: black;
+    font-weight: bold;
+    border-radius: 10%;
+    }
+    .btn {
+        width: 80%;
+        display:block;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-top: 40px;
+    }   
+
+    .btn ion-button {
+        font-size: 24px;
+    }
+
+    #error {
+        font-size: 18px;
+    }
+}
+
+@media only screen and (min-width : 992px){
+    ion-toolbar {
+        padding: 20px;
+        
+    }
+     ion-title {
+        margin-top: 10px;
+        font-size: 35px;
+        font-weight: bold;
+    }
+    ion-list {
+        margin-top: 25px;
+    }
+
+    ion-input {
+        margin-left : 30px;
+    }
+
+    ion-item {
+    border :1px solid whitesmoke;    
+    background-color: blanchedalmond;
+    font-size: 35px;
+    font-weight: bold;
+    border-radius: 10%;
+    }
+    .btn {
+        width: 80%;
+        display:block;
+        margin-left: 10%;
+        margin-right: 10%;
+        margin-top: 40px;
+    }   
+
+    .btn ion-button {
+        font-size: 30px;
+    }
+
+    #error {
+        font-size: 22px;
+    }
 }
